index html checking

--- a/war/index.html
+++ b/war/index.html
@@ -20,7 +20,10 @@
         <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
       </tr>
       <tr>
-        <td><a href="mta_java_chen">Mta_java_chen</a></td>
+        <td><a href="Area Calculation">Mta_java_chen</a></td>
+      </tr>
+         <tr>
+        <td><a href="Stock Model & Stock Servlet">StockDetails</a></td>
       </tr>
     </table>
   </body>
