--- a/war/index.html
+++ b/war/index.html
@@ -20,10 +20,13 @@
         <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
       </tr>
       <tr>
-        <td><a href="Area Calculation">Mta_java_chen</a></td>
+        <td><a href="/mta_java_chen">Area Calculation</a></td>
       </tr>
          <tr>
-        <td><a href="Stock Model & Stock Servlet">StockDetails</a></td>
+        <td><a href="/stockDetails">Stock Model & Stock Servlet</a></td>
+      </tr>
+           <tr>
+        <td><a href="/Portfolio">exe 5 ­show portfolio</a></td>
       </tr>
     </table>
   </body>
