--- a/war/index.html
+++ b/war/index.html
@@ -13,20 +13,14 @@
   </head>
 
   <body>
-    <h1>Hello Chen Arbel!</h1>
+    <h1> Stock Portfolio </h1>
 	
     <table>
       <tr>
         <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
       </tr>
       <tr>
-        <td><a href="/mta_java_chen">Area Calculation</a></td>
-      </tr>
-         <tr>
-        <td><a href="/stockDetails">Stock Model & Stock Servlet</a></td>
-      </tr>
-           <tr>
-        <td><a href="/Portfolio">exe 5 ­show portfolio</a></td>
+        <td><a href="/Portfolio">exe 5: portfolio</a></td>
       </tr>
     </table>
   </body>
