--- a/war/index.html
+++ b/war/index.html
@@ -20,7 +20,7 @@
         <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
       </tr>
       <tr>
-        <td><a href="/Portfolio">exercise 9: show me the money!</a></td>
+        <td><a href="/Portfolio">Final Exercise: show me the money!</a></td>
       </tr>
     </table>
   </body>
